@@ -1,5 +1,38 @@
-# Projects // Work in Progress
+# Monkey Tester
 
-- [Monkey Tester](https://github.com/andy-goryachev-oracle/Test/blob/main/src/goryachev/monkey/MonkeyTesterApp.java)
+This is a testing tool developed to support ad-hoc testing of JavaFX controls.
 
-- [Rich Text Area](https://github.com/andy-goryachev-oracle/Test/blob/rich.text.editor/src/goryachev/apps/RichTextAreaDemoApp.java)
+![screenshot](doc/screenshot.png)
+
+
+## Prerequisites
+
+JavaFX SDK is required to build the tool.  The latest SDK can be found here:
+
+https://jdk.java.net/javafx21/
+
+
+## Build
+
+The tool uses `ant` to build a non-modular JAR.  You'll need to specify the path to JavaFX SDK 20+:
+```
+ant -Djavafx.home=<dir>
+```
+
+
+## Run
+
+The tool requires JDK 17+ and JavaFX 20+.
+
+To launch, specify the path to the javaFX SDK lib/ folder on the command line, example:
+
+```
+java -p javafx-sdk-20/lib/ --add-modules ALL-MODULE-PATH -jar MonkeyTester.jar
+```
+
+Alternatively, the JAR file can be launched simply by double-clicking on it if you have Azul JDKFX installed.
+
+
+## Contact
+
+andy.goryachev@oracle.com
